React App for Heroku v0

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,12 +25,7 @@
         <input type="submit" value="OK" />
       </form>
       <%if (tweets) { %>
-      <h2>Tweets</h2>
-      <ul>
-        <% for(let i=0; i<tweets.length; i++) { %>
-          <li><%= tweets[i] %></li>
-        <% } %>
-      </ul>
+      <a href="/api/new_tweet">New Tweet</a>
       <% } %>
     </div>
     <!-- JS -->
