Revert "React App for Heroku v0"
This reverts commit b7b709d7f210064d6a3ee6e61369122034c1e51a.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,12 @@
         <input type="submit" value="OK" />
       </form>
       <%if (tweets) { %>
-      <a href="/api/new_tweet">New Tweet</a>
+      <h2>Tweets</h2>
+      <ul>
+        <% for(let i=0; i<tweets.length; i++) { %>
+          <li><%= tweets[i] %></li>
+        <% } %>
+      </ul>
       <% } %>
     </div>
     <!-- JS -->
